--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
-  },
-  "devDependencies": {}
+  }
 }
